# pvr.hts

./: CMakeLists.txt
debian/: changelog.in  control  rules
lib/libhts/: CMakeLists.txt
pvr.hts/: addon.xml
src/: CircBuffer.h  GUIDialogTranscode.cpp  HTSPConnection.cpp  HTSPConnection.h  HTSPData.cpp  HTSPData.h  HTSPDemux.h  HTSPDemuxer.cpp  HTSPTypes.h  HTSPVFS.cpp  Tvheadend.cpp  Tvheadend.h  client.cpp  client.h
